✏️ Fix Grid Gap Property Name

--- a/examples/grid/article/screen.css
+++ b/examples/grid/article/screen.css
@@ -66,7 +66,7 @@ br {
   body {
     display: grid;
     grid-template-columns: minmax(300px, 1fr) 1fr;
-    grid-column-gap: 1rem;
+    column-gap: 1rem;
     padding: 1rem;
   }
 
